--- a/public/html/recruit.html
+++ b/public/html/recruit.html
@@ -334,7 +334,20 @@ $(document).ready(function () {
 
 </div>
 
-
+<div class="footer">
+	<div class="container">
+	  <div class="row">
+		<div class="col-md-7">
+		  <ul>
+			<li><a href="../index.html">走进公司</a></li>
+			<li><a href="./center.html" rel="dropmenu6">产品中心</a></li>
+			<li><a href="#" rel="dropmenu43">人才招聘</a></li>
+			<li><a href="#">联系我们</a></li>
+		  </ul>
+		</div>
+	  </div>
+	  </div>
+  </div>
 
 <!-- /footer -->
 
