--- a/public/html/center.html
+++ b/public/html/center.html
@@ -410,7 +410,7 @@ $(document).ready(function () {
 		  <ul>
 			<li><a href="../index.html">走进公司</a></li>
 			<li><a href="#" rel="dropmenu6">产品中心</a></li>
-			<li><a href="./html/recruit.html" rel="dropmenu43">人才招聘</a></li>
+			<li><a href="./recruit.html" rel="dropmenu43">人才招聘</a></li>
 			<li><a href="#">联系我们</a></li>
 		  </ul>
 		</div>
