--- a/public/html/center.html
+++ b/public/html/center.html
@@ -263,7 +263,7 @@ ScrollDiv('KeFuDiv');
                                 </ul>
                             </div>
                             <div class="tools col-md-3">
-                                <a href="#">电话:0411-84541025</a> <br>
+                                <a href="#">电话:0411-XXXXXXXX</a> <br>
 
                             </div>
 
