--- a/public/html/recruit.html
+++ b/public/html/recruit.html
@@ -255,7 +255,7 @@ ScrollDiv('KeFuDiv');
 
 
                             <div class="tools col-md-3">
-                                <a href="#">电话:0411-84541025</a> <br>
+                                <a href="#">电话:0411-XXXXXXXX</a> <br>
                             </div>
                         </div>
 
