--- a/public/html/detail.html
+++ b/public/html/detail.html
@@ -1,34 +1,24 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"><head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>产品中心_大连三生源医疗仪器有限公司</title>
-<meta name="keywords" content="">
+<!-- saved from url=(0057)http://www.dl-ssy.com/web/cn/cpzx/cpfl1/2014/1015/90.html -->
+<html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+<title>冷热敷治疗仪_大连三生源医疗仪器有限公司</title>
+<meta name="keywords" content="冷,热敷,冷,热敷,">
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="../css/bootstrap.css">
+<link rel="stylesheet" href="../css/bootstrap.min.css">
 <link rel="stylesheet" href="../css/css.css">
-<link rel="stylesheet" href="../css/font-awesome.css">
-<link rel="stylesheet" href="../css/owl.css">
-<link rel="stylesheet" href="../css/owl_002.css">
+<link rel="stylesheet" href="../css/font-awesome.min.css">
+<link rel="stylesheet" href="../css/owl.carousel.css">
+<link rel="stylesheet" href="../css/owl.theme.css">
 <link rel="stylesheet" href="../css/demo.css">
 <link rel="stylesheet" href="../css/devices.css">
-<!-- 
-<script src="../image/jquery-1.htm"></script>
-<script src="../image/owl.htm"></script> -->
-<script type="text/javascript" src="../js/jquery_002.js"></script>
-<script type="text/javascript" src="../js/jquery.js"></script>
+
+<script src="../js/owl.carousel.js"></script>
+<script type="text/javascript" src="../js/jquery.event.drag-1.5.min.js"></script>
+<script type="text/javascript" src="../js/jquery.touchSlider.js"></script>
 <script type="text/javascript">
 $(document).ready(function () {
-
-$(".productList li").hover(function(){
-
-    $(this).find("span").fadeIn()
-  },function(){
-    $(this).find("span").fadeOut()
-  })
-
-
-
 	$(".main_visual").hover(function(){
 		$("#btn_prev,#btn_next").fadeIn()
 		},function(){
@@ -70,13 +60,12 @@ $(".productList li").hover(function(){
 });
 </script>
 
-
 </head>
-<body class="articlelist">
+<body class="articleview">
 
 
-<script type="text/javascript" src="../js/jquery_003.js"></script>
-<script type="text/javascript" src="../js/jcarousellite_1.js"></script>
+<script type="text/javascript" src="../js/jquery.nivo.slider.js"></script>
+<script type="text/javascript" src="../js/jcarousellite_1.0.1.js"></script>
 <script type="text/javascript" src="../js/ddsmoothmenu.js"></script>
 <script type="text/javascript">
 $(window).load(function() {
@@ -257,7 +246,7 @@ ScrollDiv('KeFuDiv');
                             <div class="menu col-md-7">
                                 <ul>
                                     <li><a href="../index.html">走进公司</a></li>
-                                    <li><a href="#" rel="dropmenu6">产品中心</a></li>
+                                    <li><a href="./center.html" rel="dropmenu6">产品中心</a></li>
                                     <li><a href="./recruit.html" rel="dropmenu43">人才招聘</a></li>
                                     <li><a href="#">联系我们</a></li>
                                 </ul>
@@ -288,8 +277,8 @@ $(document).ready(function () {
 </script>
 
 
-<div class="inBanner" style="background-image:url(../image/wallhaven-12018.jpg)">
-产品中心
+<div class="inBanner" style="background-image:url(images/wallhaven-12018.jpg)">
+自主研发产品
 </div>
 
 <div class="container">
@@ -297,106 +286,40 @@ $(document).ready(function () {
   <div class="row">
 
     <div class="col-md-12 sub">
-       &gt;<a href="#">产品中心</a>&gt;
+        &gt;<a href="./center.html">产品中心</a>&gt;<a href="#">自主研发产品</a>&gt;
     </div>
 
     <div class="col-md-12 info">
 
-      <ul class="productTypes">
-      		<li><a href="#">自主研发产品</a></li>
-      		<li><a href="#">特约经销产品</a></li>
-      </ul>
+			<h2 style="width:100%; text-align:center">冷热敷治疗仪</h2>
+
+        <p style="text-align: center;">
+	<img alt="" src="../image/1-200214104QL08.jpg" style="width: 594px; height: 800px;"></p>
+				<div class="context">
+					<ul>
+						<li>上一篇：<a href="#">振动排痰器</a> </li>
+						<li>下一篇：<a href="#">冷热敷治疗仪（便携式）</a> </li>
+					</ul>
+				</div><!-- /context -->
 
 
-      <ul class="productList row">
-        <li class="col-md-4 list1">
-          <a style="background-image:url(../image/1-150521093959502.jpg )" href="./detail.html" class="title">
-            <span><b>冷热敷治疗仪</b>
-              <p>...</p>
-            </span>
-          </a>
-        </li><li class="col-md-4 list1">
-          <a style="background-image:url(../image/1_1058141261.jpg )" href="#" class="title">
-            <span>冷热敷治疗仪（便携式）
-              <p>冷热敷治疗仪（便携式）的产品介绍...</p>
-            </span>
-          </a>
-        </li><li class="col-md-4 list1">
-          <a style="background-image:url(../image/1-1Z220152454331.jpg )" href="#" class="title">
-            <span>超声中频治疗仪
-              <p>产品特点 电脑智能化控制与显示，直观、精确。进口触摸式键盘操作，方便、可靠。新型医用硅胶电极片，安全可靠、寿命长。 该机操作简单，多路输出（两路超声、三路中频），固...</p>
-            </span>
-          </a>
-        </li><li class="col-md-4 list1">
-          <a style="background-image:url(../image/2-1Z326132J70-L.jpg )" href="#" class="title">
-            <span>盆底康复治疗仪
-              <p>产品特点 本产品采取多路反馈新技术，提高了治疗效果，突出了不同患者的个性化治疗，且仪器携带方便、操作简单、安全可靠。 适用范围 中风后遗症的大小便失禁，产后康复，老年...</p>
-            </span>
-          </a>
-        </li><li class="col-md-4 list1">
-          <a style="background-image:url(../image/2-1Z3261322340-L.jpg )" href="#" class="title">
-            <span>吞咽康复治疗仪
-              <p>产品特点 本仪器采用多种反馈信息控制技术，提高了治疗效果，突出了患者的个性化治疗。本仪器小巧方便、操作简单、安全可靠。 适用范围 脑中风后遗症的吞咽功能障碍及老年性吞...</p>
-            </span>
-          </a>
-        </li><li class="col-md-4 list1">
-          <a style="background-image:url(../image/2-1Z3261326130-L.jpg )" href="#" class="title">
-            <span>药物离子导入治疗仪
-              <p>产品特点 本产品采用超声导入和中频导入两个方法，可同时双通道治疗。既可单独使用超声治疗、中频治疗、超声药物离子导入、中频药物离子导入，还可同时合并使用或交替使用，扩...</p>
-            </span>
-          </a>
-        </li><li class="col-md-4 list1">
-          <a style="background-image:url(../image/1-1Z22015223MS.jpg )" href="#" class="title">
-            <span>深层肌肉刺激按摩仪介绍
-              <p>深层肌肉刺激按摩仪： 缓解肌肉痉挛及过度紧张，减轻疼痛，化解肌肉钙化黏连；舒筋活血，促进循环，加速肌酸排泄，疏解肌肉组织，改善理化症状。 可用于：中风后遗症的四肢康...</p>
-            </span>
-          </a>
-        </li><li class="col-md-4 list1">
-          <a style="background-image:url(../image/1-1Z22015200LM.jpg )" href="#" class="title">
-            <span>生物反馈治疗仪
-              <p>产品特点 1、多功能 2、多路反馈 3、多模式多处方 4、更安全更有效 适用范围 适用于卒中偏瘫、小儿脑瘫、颅脑损伤、外周神经损伤、痉挛状态、废用性肌萎缩、关节运动受限、吞咽功...</p>
-            </span>
-          </a>
-        </li><li class="col-md-4 list1">
-          <a style="background-image:url(../image/2-1P319110031564.jpg )" href="#" class="title">
-            <span>热疗
-              <p>W2102型高频治疗机主要是应用其高频电磁场作用于深部组织，利用热效应选择性破坏、杀伤病变细胞达到治疗目的。该机适合治疗恶性肿瘤和良性疾病。恶性肿瘤主要用于肺癌、肝癌、胃癌、肠...</p>
-            </span>
-          </a>
-        </li><li class="col-md-4 list1">
-          <a style="background-image:url(../image/2-1P319160945459.jpg )" href="#" class="title">
-            <span>加速器
-              <p>技术参数 功能 指标 射线类型 X射线 标称能量 6MV 正常治疗距离（NTD） 100+2CM 最大输出剂量率 350cGy/min 500cGy/min(可选) 600cGy/min(可选) 治疗方式 多角度固定束治疗、适形治疗 照射野范围（...</p>
-            </span>
-          </a>
-        </li><li class="col-md-4 list1">
-          <a style="background-image:url(../image/1_1008063341.jpg )" href="#" class="title">
-            <span>振动排痰器
-              <p>...</p>
-            </span>
-          </a>
-        </li><li class="col-md-4 list1">
-          <a style="background-image:url(../image/1_0843588601.jpg )" href="#" class="title">
-            <span>高压氧舱
-              <p>...</p>
-            </span>
-          </a>
-        </li>
-      </ul>
+				<div class="others">
 
-      <div class="dede_pages">
-  			<ul class="pagelist">
-               <li>首页</li>
-<li class="thisclass">1</li>
-<li><a href="#">2</a></li>
-<li><a href="#">下一页</a></li>
-<li><a href="#">末页</a></li>
-<li><span class="pageinfo">共 <strong>2</strong>页<strong>19</strong>条</span></li>
+					<ul>
+						<li><a href="#">冷热敷治疗仪</a></li>
+<li><a href="#">冷热敷治疗仪（便携式）</a></li>
+<li><a href="#">超声中频治疗仪</a></li>
+<li><a href="#">盆底康复治疗仪</a></li>
+<li><a href="#">吞咽康复治疗仪</a></li>
+<li><a href="#">药物离子导入治疗仪</a></li>
 
-  			</ul>
-  		</div><!-- /pages -->
+					</ul>
+
+				</div>
 
     </div>
+
+
 
 
   </div>
@@ -404,21 +327,24 @@ $(document).ready(function () {
 </div>
 
 <div class="footer">
-	<div class="container">
-	  <div class="row">
-		<div class="col-md-7">
-		  <ul>
-			<li><a href="../index.html">走进公司</a></li>
-			<li><a href="#" rel="dropmenu6">产品中心</a></li>
-			<li><a href="./recruit.html" rel="dropmenu43">人才招聘</a></li>
-			<li><a href="#">联系我们</a></li>
-		  </ul>
-		</div>
-	  </div>
-	  </div>
-  </div>
 
+  <div class="container">
 
+    <div class="row">
+      <div class="col-md-7">
+        <ul>
+          <li><a href="../index.html">走进公司</a></li>
+          <li><a href="./center.html" rel="dropmenu6">产品中心</a></li>
+          <li><a href="./recruit.html" rel="dropmenu43">人才招聘</a></li>
+          <li><a href="#">联系我们</a></li>
+        </ul>
+      </div>
+
+    </div>
+
+    </div>
+
+</div>
 <!-- /footer -->
 
 
