--- a/public/index.html
+++ b/public/index.html
@@ -536,7 +536,7 @@ $('.owl-carousel').owlCarousel({
           <li><a href="#">走进公司</a></li>
           <li><a href="./html/center.html" rel="dropmenu6">产品中心</a></li>
           <li><a href="./html/recruit.html" rel="dropmenu43">人才招聘</a></li>
-          <li><a href="#">联系我们</a></li>
+          <li><a href="#">联系我们testaaa</a></li>
         </ul>
       </div>
     </div>
